# kommunalpolitik_ki

./: .credo.exs  .formatter.exs  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .workspace.exs  AGENTS.md  Makefile  README.md  config.local.yml.example  mix.exs  opencode.json  renovate.json
.github/: dependabot.yml
.github/workflows/: elixir.yml  python.yml  renovate.yml
apps/ratsinfo/: mix.exs
apps/ratsinfo/config/: config.exs
apps/ratsinfo/lib/: ratsinfo.ex
apps/ratsinfo/lib/ratsinfo/: api_client.ex  auth.ex  cli.ex  config.ex  repo.ex  store.ex
apps/ratsinfo/lib/ratsinfo/schemas/: dokument.ex  sitzung.ex  textblock.ex  top.ex
apps/ratsinfo/priv/repo/migrations/: 20250711000001_initial_schema.exs
apps/ratsprojekte/: .gitignore  PLANUNG.md  README.md  mix.exs
apps/ratsprojekte/config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
apps/ratsprojekte/lib/: ratsprojekte.ex  ratsprojekte_web.ex
apps/ratsprojekte/lib/ratsprojekte/: application.ex  proposal_applier.ex  repo.ex
apps/ratsprojekte/lib/ratsprojekte/mcp/: server.ex
apps/ratsprojekte/lib/ratsprojekte/schemas/: blocker.ex  pending_proposal.ex  projekt.ex  quelle.ex  realisierungsstrang.ex  schritt.ex  vorbedingung.ex
apps/ratsprojekte/lib/ratsprojekte_web/: endpoint.ex  nav_assigns.ex  router.ex  telemetry.ex
apps/ratsprojekte/lib/ratsprojekte_web/components/: layouts.ex  (+1 more)
apps/ratsprojekte/priv/: antragsreife_kriterien.md
apps/ratsprojekte/priv/repo/: seeds.exs
apps/ratsprojekte/priv/static/: ui-mockup.html
apps/ratsprojekte/test/: test_helper.exs
apps/ratsprojekte/test/support/: conn_case.ex  data_case.ex  fixtures.ex
apps/shared/: mix.exs
apps/shared/lib/: shared.ex
apps/shared/lib/shared/: abstimmung.ex  dokument.ex  gremium.ex  sitzung.ex  suchergebnis.ex  textblock.ex  top.ex
apps/shared/test/: shared_test.exs
docs/: nomenklatur.md  prerequisites.md  ratsprojekte-lifecycle.md  workflows.md
scripts/: create-workflow-issues-2.sh
skills/foerdermittel/: SKILL.md
skills/foerdermittel_recherche/: SKILL.md
skills/foerdermittel_recherche/evals/: evals.json
skills/projekt_delta/: SKILL.md
skills/projekt_tracker/: SKILL.md
skills/proposal_vorbereitung/: SKILL.md
skills/ratsprojekt_delta/: SKILL.md
skills/ratsprojekt_proposal/: SKILL.md
skills/ratsprojekt_stand/: SKILL.md
skills/sitzungsvorbereitung/: SKILL.md
skills/vault_suche/: SKILL.md
tools/allgaeuer_zeitung_mcp/: .env.example  .gitignore  README.md  pyproject.toml
tools/allgaeuer_zeitung_mcp/src/newspaper_mcp/: __init__.py  auth.py  browser_fallback.py  client.py  extract.py  models.py  parsers.py  server.py
tools/pdf_ingest/: README.md  pyproject.toml
tools/pdf_ingest/src/pdf_ingest/: __init__.py  __main__.py  extractor.py  models.py  ocr.py  server.py
tools/pdf_ingest/tests/: conftest.py  test_extractor.py  test_ocr.py
vault_suche-workspace/evals/: evals.json
vault_suche-workspace/iteration-1/: benchmark.json
(+39 files in other folders)
