[project]
name = "pdf-ingest"
version = "0.1.0"
description = "MCP server for PDF ingestion: text + annotation extraction with optional OCR"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.2.0",
    "pdfplumber>=0.11.0",
    "pdfannots>=0.5.0",
    "pydantic>=2.9.0",
]

[project.scripts]
pdf-ingest = "pdf_ingest.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pdf_ingest"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pypdf>=6.14.2",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true

[[tool.mypy.overrides]]
module = ["pdfannots.*", "pdfplumber.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
