[project]
name = "pdf-ingest"
version = "0.1.0"
description = "MCP server for PDF ingestion: text + annotation extraction with optional OCR"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.28.1",
    "pdfplumber>=0.11.10",
    "pdfannots>=0.5.0",
    "pydantic>=2.13.4",
]

[project.scripts]
pdf-ingest = "pdf_ingest.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pdf_ingest"]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.21",
    "mypy>=2.3.0",
    "pypdf>=6.14.2",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true

[[tool.mypy.overrides]]
module = ["pdfannots.*", "pdfplumber.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
